--- a/media/store.yaml
+++ b/media/store.yaml
@@ -29,6 +29,7 @@ en:
 
     SHARIK IS AVAILABLE ON THOSE LANGUAGES:
       - English (English)
+      - Persian (فارسی)
       - Arabic (عربي)
       - Hindi (हिन्दी)
       - Russian (Русский)
@@ -49,6 +50,58 @@ en:
 
 
     Download Sharik right now!
+    
+fa:
+  # 50 characters
+  Name: "شریک - انتقال فایل با وای فای"
+  # 60 characters
+  Very short description: "با استفاده از شریک فایل های خود را در شبکه محلی خود به اشتراک بگذارید"
+  # 80 characters
+  Short description: "یک راه حل متن باز، چند پلتفرمی برای انتقال فایل در شبکه محلی"
+  # 4000 characters
+  Full description: |
+    شریک یک راه حل اوپن سورس، کراس پلتفرم، برای انتقال فایل از طریق وای فای یا نقطه اتصال موبایل می باشد.
+    
+    با شریک شما میتوانید به راحتی تصاویر، برنامه ها، فایل ها، متن و... را به راحتی به هر دستگاهی که به شبکه یکسان متصل است ارسال کنید.راحت و سریع.
+    
+    پس از انتخاب زبان و مرور مقدمه ، می توانید دکمه های اشتراک و آخرین پرونده هایی را که به اشتراک گذاشته اید در صفحه اصلی مشاهده کنید. در این مرحله ، می توانید تصاویر ، پرونده ها ، برنامه های نصب شده یا متن را به اشتراک بگذارید. پس از انتخاب پرونده ، صفحه اشتراک گذاری به شما نشان داده می شود. در اینجا می توانید وضعیت اتصال خود (وای فای / نقطه اتصال تلفن همراه) و لینک مورد نیاز برای باز کردن در دستگاه دیگر را مشاهده کنید. پس از وارد کردن این لینک در مرورگر روی دستگاه دیگر ، بارگیری پرونده شروع می شود. لطفاً اطمینان حاصل کنید که هر دو دستگاه به یک شبکه متصل هستند.
+    
+    فرض کنید شریک را روی هر دو دستگاه نصب کرده اید. در این حالت ، پس از اشتراک فایل از یک رایانه ، می توانید روی دکمه "دریافت" در پنل پایین شریک دیگر کلیک کنید. پس از کلیک ، صفحه گیرنده نشان داده می شود. اگر شریک ببیند دستگاه دیگری در شبکه محلی شما چیزی را به اشتراک می گذارد ، نمایش داده می شود. بنابراین می توانید فقط روی آن کلیک کنید ، مرورگر باز می شود و بارگیری شروع می شود.
+
+    استفاده از شریک کاملاً رایگان است و هیچ تبلیغی ندارد. علاوه بر این ، کد منبع آن در گیت هاب منتشر شده است ، بنابراین همه می توانند به روند توسعه کمک کنند. اگر آن را پسندیدید ، لطفاً یک ستاره در مخزن گیت هاب ما بگذارید و در نظر بگیرید که سهمی را در اختیار داشته باشید: یک زبان جدید اضافه کنید یا به ما در زمینه کد کمک کنید
+    
+    شریک توسط Dart، Flutter، Hover.buil و Golang ساخته شده و تحت مجور آزاد (MIT) می باشد.
+
+
+    انواع فایلی که میتوانید ارسال کنید:
+      1. تصاویر (jpg, png, gif, etc)
+      2. برنامه ها (apk)
+      3. فایل ها (zip, rar, 7z, pdf, etc)
+      4. متن
+
+    شریک در این زبان ها موجود است:
+      - English (English)
+      - Persian (فارسی)
+      - Arabic (عربي)
+      - Hindi (हिन्दी)
+      - Russian (Русский)
+      - Gujarati (ગુજરાતી)
+      - Polski (Polski)
+      - Ukrainian (Українська)
+      - Slovak (Slovenčina)
+      - Turkish (Türkçe)
+
+    همچنین شریک برای این پلتفرم ها موجود می باشد:
+      - Windows
+      - macOS
+      - Linux
+      - Android
+      - iOS
+
+    آدرس صفحه گیت هاب: https://github.com/marchellodev/sharik
+
+
+    همین الان شریک را دانلود کنید!
 
 ar:
   # 50 characters
