--- a/media/store.yaml
+++ b/media/store.yaml
@@ -134,6 +134,7 @@ ar:
 
     شارك يدهم هذه اللغات:
       - English (English)
+      - Persian (فارسی)
       - Arabic (عربي)
       - Hindi (हिन्दी)
       - Russian (Русский)
@@ -181,6 +182,7 @@ ru:
 
     SHARIK ДОСТУПЕН НА СЛЕДУЮЩИХ ЯЗЫКАХ:
       - English (English)
+      - Persian (فارسی)
       - Arabic (عربي)
       - Hindi (हिन्दी)
       - Russian (Русский)
@@ -228,6 +230,7 @@ uk:
 
     SHARIK ДОСТУПНИЙ НА НАСТУПНИХ МОВАХ:
       - English (English)
+      - Persian (فارسی)
       - Arabic (عربي)
       - Hindi (हिन्दी)
       - Russian (Русский)
@@ -276,6 +279,7 @@ pl:
 
     SHARIK JEST DOSTĘPNY W NASTĘPUJĄCYCH JĘZYKACH:
       - English (English)
+      - Persian (فارسی)
       - Arabic (عربي)
       - Hindi (हिन्दी)
       - Russian (Русский)
@@ -321,6 +325,7 @@ in-gu:
 
     Sharik તે ભાષાઓ માટે ઉપલબ્ધ છે:
       - English (English)
+      - Persian (فارسی)
       - Arabic (عربي)
       - Hindi (हिन्दी)
       - Russian (Русский)
@@ -368,6 +373,7 @@ in-hi:
 
     Sharik इस भाषा पर उपलब्ध है:
       - English (English)
+      - Persian (فارسی)
       - Arabic (عربي)
       - Hindi (हिन्दी)
       - Russian (Русский)
@@ -420,6 +426,7 @@ in-hi:
 
     SHARIK ESTÁ DISPONÍVEL NESSES IDIOMAS:
       - English (English)
+      - Persian (فارسی)
       - Arabic (عربي)
       - Hindi (हिन्दी)
       - Russian (Русский)
@@ -473,6 +480,7 @@ sk:
 
     SHARIK JE K DISPOZÍCII V TÝCHTO JAZYKOCH:
       - English (English)
+      - Persian (فارسی)
       - Arabic (عربي)
       - Hindi (हिन्दी)
       - Russian (Русский)
@@ -525,6 +533,7 @@ tr:
 
     SHARIK ŞU DİLLERDE MEVCUT:
       - English (English)
+      - Persian (فارسی)
       - Arabic (عربي)
       - Hindi (हिन्दी)
       - Russian (Русский)
