--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,13 @@ dependencies:
 
   # UI
   flutter_svg: ^0.19.2+1
-  google_fonts: ^1.1.1
+  google_fonts: ^1.1.2
   intro_slider: ^2.3.3
   responsive_framework: ^0.0.14
 
+
   # UTILS
-  http: ^0.12.2
+  http: ^0.12.0+2
   wifi_iot: ^0.2.0
   ping_discover_network: ^0.2.0+1
   simple_connectivity: ^0.1.1
@@ -39,20 +40,19 @@ dependencies:
   hive: ^1.4.4+1
   hive_flutter: ^0.3.1
 
-  package_info: ^0.4.3+2
+  package_info: ^0.4.3+4
 
-  usage: ^3.4.2
+  usage: ^4.0.0
 
   intl: ^0.17.0-nullsafety.2
 
 
   file_selector: ^0.7.0+2
-  file_selector_windows: ^0.0.1
+  file_selector_windows: ^0.0.2
+
 
   # ARCHITECTURE
   provider: ^4.3.3
-
-
 
 
   # DESKTOP-SPECIFIC
@@ -69,7 +69,7 @@ dev_dependencies:
   build_runner: any
   hive_generator: ^0.8.2
 
-#  intl_translation: ^0.17.10+1
+  #  intl_translation: ^0.17.10+1
   lint: ^1.5.1
 
 flutter:
