--- a/media/store.yaml
+++ b/media/store.yaml
@@ -629,7 +629,7 @@ zh_Hans:
   Short description: "一个开源跨平台的本地网络文件分享解决方案"
   # 4000 characters
   Full description: |
-    Sharik十一个开源跨平台的通过Wi-Fi或手机热点分享文件的解决方案。
+    Sharik是一个开源跨平台的通过Wi-Fi或手机热点分享文件的解决方案。
 
     这个应用帮助你方便地发送照片、应用、文件、文本等几乎任何东西到所有连接到相同网络的设备上，方便快捷。
 
