--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,26 +21,26 @@ dependencies:
 
 
   # UI
-  flutter_svg: ^0.19.2+1
+  flutter_svg: ^0.19.3
   google_fonts: ^1.1.2
-  intro_slider: ^2.3.3
+  intro_slider: ^2.3.4
   responsive_framework: ^0.0.14
 
 
   # UTILS
-  http: ^0.12.0+2
-  wifi_iot: ^0.2.0
+  http: ^0.12.0+1
+  wifi_iot: ^0.2.2
   ping_discover_network: ^0.2.0+1
   simple_connectivity: ^0.1.1
 
   path_provider: ^1.6.27
-  url_launcher: ^5.7.10
+  url_launcher: ^6.0.1
   device_apps: ^1.2.0
 
   hive: ^1.4.4+1
   hive_flutter: ^0.3.1
 
-  package_info: ^0.4.3+4
+  package_info: ^2.0.0
 
   usage: ^4.0.0
 
@@ -66,7 +66,7 @@ dependencies:
 
 
 dev_dependencies:
-  build_runner: any
+  build_runner: ^1.11.5
   hive_generator: ^0.8.2
 
   #  intl_translation: ^0.17.10+1
@@ -79,7 +79,7 @@ flutter:
   assets:
     - assets/slides/
     - assets/flags/
-    - assets/icons/social
+    - assets/icons/social/
     - assets/
     - google_fonts/
 
