--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,8 @@ dependencies:
   url_launcher: ^6.0.2
   device_apps: ^1.2.0
 
-  hive: ^1.4.4+1
-  hive_flutter: ^1.0.0-nullsafety.0
+  hive: ^2.0.0
+  hive_flutter: ^1.0.0
 
   package_info: ^2.0.0
 
@@ -54,7 +54,7 @@ dependencies:
   file_selector_macos: ^0.0.4
 
   # Android and IOS
-  file_picker: ^2.1.7
+  file_picker: ^3.0.0
 
 
   # ARCHITECTURE
@@ -75,7 +75,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^1.11.5
-  hive_generator: ^0.8.2
+  hive_generator: ^1.0.0
 
   #  intl_translation: ^0.17.10+1
   lint: ^1.5.2
