--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
 
   path_provider: ^2.0.1
   url_launcher: ^6.0.2
-  device_apps: ^1.2.0
+  device_apps: ^1.3.0
 
   hive: ^2.0.0
   hive_flutter: ^1.0.0
@@ -78,11 +78,11 @@ dev_dependencies:
   hive_generator: ^1.0.0
 
   #  intl_translation: ^0.17.10+1
-  lint: ^1.5.2
+  lint: ^1.5.3
 
 flutter:
   generate: true
-  uses-material-design: false
+  uses-material-design: true
 
   assets:
     - assets/slides/
