--- a/media/store.yaml
+++ b/media/store.yaml
@@ -37,6 +37,7 @@ en:
       - Polski (Polski)
       - Ukrainian (Українська)
       - Slovak (Slovenčina)
+      - Sinhala (සිංහල)
       - Turkish (Türkçe)
       - Chinese Simplified (简体中文)
 
