පරිවර්තන එකතු කරන ලදි

--- a/media/store.yaml
+++ b/media/store.yaml
@@ -512,6 +512,61 @@ sk:
 
 
     Stiahnite si Sharik hneď teraz!
+    
+si:
+  # 50 characters
+  Name: "ෂරික් - වයි-ෆයි හරහා ගොනු හුවමාරුව"
+  # 60 characters
+  Very short description: "ෂරික් ඔබගේ ස්ථානීය ජාලය තුළ පහසුවෙන් ගොනු බෙදා ගැනීමට ඉඩ දෙයි"
+  # 80 characters
+  Short description: "An open-source, cross-platform solution for sharing files within a local network"
+  # 4000 characters
+  Full description: |
+    Sharik is an open-source, cross-platform solution for sharing files via Wi-Fi or Mobile Hotspot.
+
+
+    මෙම යෙදුම එකම ජාලයකට සම්බන්ධ සියලුම වර්ගවල උපාංග වෙත පහසුවෙන් ඡායාරූප, මෘදුකාංග, ලිපිගොනු, පාඨ සහ ඇත්ත වශයෙන්ම ඕනෑම දෙයක් යැවීමට ඔබට ඉඩ දෙයි. එය පහසු සහ අතිශය වේගවත් ය.
+    
+    භාෂාවක් තෝරාගෙන හඳුන්වාදීම හරහා ගිය පසු ප්‍රධාන තිරයෙහි බෙදාගැනීමේ බොත්තම් සහ ඔබ බෙදාගත් නවතම ගොනු දැකගත හැකිය. මෙම අවස්ථාවේදී ඔබට පින්තූර, ලිපිගොනු, ස්ථාපිත යෙදුම් හෝ සරල පාඨ බෙදා ගත හැකිය. ගොනුව තේරීමෙන් පසු ඔබට බෙදාගැනීමේ තිරය පෙන්වනු ඇත. මෙහිදී ඔබගේ සම්බන්ධතා තත්ත්වය (වයි-ෆයි/Mobile Hotspot) සහ අනෙක් උපාංගයේ විවෘත කිරීමට අවශ්‍ය ඒ.ස.නි.(URL) දැක ගත හැකි ය. අතිරික්සුවේ මෙම ඒ.ස.නි.(URL) ඇතුළත් කර අනෙක් යන්ත්‍රයේ ඇතුල් කිරීමේ යතුර එබීමෙන් පසු ගොනුව බාගතවීම ආරම්භ වේ. කරුණාකර උපාංග දෙකම එකම ජාලයකට සම්බන්ධ වී ඇති බවට වග බලා ගන්න.
+    
+    ඔබ යන්ත්‍ර දෙකෙහිම ෂරික් ස්ථාපනය කර ඇතැයි සිතමු. මෙම අවස්ථාවේදී, එක් පරිගණකයකින් ගොනුව බෙදාගැනීමෙන් පසු, ඔබට වෙනත් ෂරීක් යන්ත්‍රයක පහළ පුවරුවේ ඇති “ලැබෙන” බොත්තම ක්ලික් කළ හැකිය. ක්ලික් කිරීමෙන් පසු, ලැබෙන තිරය පෙන්වනු ඇත. ඔබගේ ස්ථානීය ජාලයේ යමක් බෙදාගන්නා වෙනත් උපාංගයක් ෂරික් දුටුවහොත් එය දර්ශනය කෙරේ. එබැවින් ඔබට එය මත ක්ලික් කළ හැකිය, අතිරික්සුව විවෘත වී බාගතවීම ආරම්භ වනු ඇත.
+    
+    ෂරික් සම්පූර්ණයෙන්ම නොමිලේ භාවිතා කිරීමට නිදහස ඇති අතර එහි දැන්වීම් නොමැත. එපමණක් නොව, එහි මූල කේත ගිට්හබ් හි ප්‍රකාශයට පත් කර ඇති බැවින් සංවර්ධන ක්‍රියාවලියට සෑම කෙනෙකුටම දායක විය හැකිය. ඔබ එයට කැමති නම් කරුණාකර අපගේ ගිට්ගබ් කෝෂ්ඨාගාරයේ තරුවක් තබා දායකත්වයක් ලබා දීම පිළිබඳව සලකා බලන්න: නව භාෂාවක් එකතු කිරීමෙන් හෝ කේතනයෙන් අපට උදව් කරන්න
+    
+    ෂාරික් නිර්මාණය කර ඇත්තේ ඩාර්ට්, ෆ්ලැටර්, හෝවර්.බිල්ඩ් සහ ගොලැන්ග් භාවිතා කරමිනි. ෂරික් විවෘත බලපත්‍රයක් (එම්අයිටී) යටතේ ප්‍රකාශයට පත් කර ඇත.
+
+
+    ඔබට යැවිය හැකි දෑ:
+      1. පින්තූර (jpg, png, gif, etc)
+      2. මෘදුකාංග (apk)
+      3. ගොනු (zip, rar, 7z, pdf, etc)
+      4. පාඨ
+
+    ෂරීක් මෙම භාෂාවන්ගෙන් ලබාගත හැකිය: 
+      - ඉංග්‍රීසි (English)
+      - පර්සියානු (فارسی)
+      - අරාබි (عربي)
+      - හින්දි (हिन्दी)
+      - රුසියානු (Русский)
+      - ගුජරාටි (ગુજરાતી)
+      - පෝලන්ත (Polski)
+      - යුක්රේනියානු (Українська)
+      - ස්ලෝවැකියානු (Slovenčina)
+      - සිංහල (සිංහල)
+      - තුර්කි (Türkçe)
+      - සරල චීන (简体中文)
+      
+    ෂරික් ලබා ගත හැකිය:
+      - වින්ඩෝස්
+      - මැක්ඕස්
+      - ලිනක්ස්
+      - ඇන්ඩ්‍රොයිඩ්
+      - අයිඕඑස්
+
+    ගිට්හබ් පිටුව: https://github.com/marchellodev/sharik
+
+
+    දැන්ම ෂරික් බාගන්න!
 
 tr:
   # 50 characters
