--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,12 @@ dependencies:
 
 
   # UI
-  flutter_feather_icons: ^1.0.3
-  flutter_svg: ^0.21.0-nullsafety.0
+  flutter_feather_icons: ^2.0.0+1
+  flutter_svg: ^0.21.0
   google_fonts: ^2.0.0
-  intro_slider: ^2.3.4
+  intro_slider: ^2.3.4 # requested
   responsive_framework: ^0.1.0
-  androidish_ink_well: ^2.0.0
+  androidish_ink_well: ^2.0.0 # requested
   qr_flutter: ^4.0.0
 
   # todo https://pub.dev/packages/flutter_native_splash
@@ -36,10 +36,10 @@ dependencies:
   ping_discover_network: ^0.2.0+1
 
   path_provider: ^2.0.1
-  url_launcher: ^6.0.2
-  device_apps: ^2.0.1
+  url_launcher: ^6.0.3
+  device_apps: ^2.0.2
 
-  hive: ^2.0.0
+  hive: ^2.0.2
   hive_flutter: ^1.0.0
 
   package_info: ^2.0.0
@@ -55,7 +55,7 @@ dependencies:
   file_selector_macos: ^0.0.4
 
   # Android and IOS
-  file_picker: ^3.0.0
+  file_picker: ^3.0.1
 
 
   # ARCHITECTURE
@@ -75,8 +75,8 @@ dependencies:
 
 
 dev_dependencies:
-  build_runner: ^1.11.5
-  hive_generator: ^1.0.0
+  build_runner: ^1.12.2
+  hive_generator: ^1.0.1
 
   #  intl_translation: ^0.17.10+1
   lint: ^1.5.3
