small ui tweaks

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,11 @@ dependencies:
 
   # UI
   flutter_feather_icons: ^2.0.0+1
-  flutter_svg: ^0.21.0
+  flutter_svg: ^0.21.0+1
   google_fonts: ^2.0.0
-  intro_slider: ^2.3.4 # requested
+  intro_slider: ^2.4.0
   responsive_framework: ^0.1.0
-  androidish_ink_well: ^2.0.0 # requested
+
   qr_flutter: ^4.0.0
 
   # todo https://pub.dev/packages/flutter_native_splash
@@ -39,7 +39,7 @@ dependencies:
   url_launcher: ^6.0.3
   device_apps: ^2.0.2
 
-  hive: ^2.0.2
+  hive: ^2.0.3
   hive_flutter: ^1.0.0
 
   package_info: ^2.0.0
