--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,3 +88,11 @@ flutter:
     - family: JetBrainsMono
       fonts:
         - asset: fonts/JetBrainsMono-Regular.ttf
+        - asset: fonts/JetBrainsMono-Medium.ttf
+          weight: 500
+#        - asset: fonts/JetBrainsMono-SemiBold.ttf
+#          weight: 600
+        - asset: fonts/JetBrainsMono-Bold.ttf
+          weight: 700
+        - asset: fonts/JetBrainsMono-ExtraBold.ttf
+          weight: 800
