--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,10 @@ author: marchellodev
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
+icapps_license:
+  failFast: true    # Errors are not ignored and the generator will fail with an error
+  nullsafety: true  # Generate nullsafe code
+
 # todo verify & sync google_fonts files
 dependencies:
   flutter:
@@ -73,11 +77,9 @@ dev_dependencies:
   build_runner: ^2.0.2
   hive_generator: ^1.1.0
 
-  flutter_oss_licenses: ^1.0.1
-
-
-#  intl_translation: ^0.17.10+1
   lint: ^1.5.3
+
+  #  intl_translation: ^0.17.10+1
 
 flutter:
   generate: true
