--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,6 @@ author: marchellodev
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
-icapps_license:
-  failFast: true    # Errors are not ignored and the generator will fail with an error
-  nullsafety: true  # Generate nullsafe code
-
 # todo verify & sync google_fonts files
 dependencies:
   flutter:
@@ -26,15 +22,17 @@ dependencies:
 
   # UI
   flutter_feather_icons: ^2.0.0+1
-  flutter_svg: ^0.22.0
-  google_fonts: ^2.0.0
+  flutter_svg: any
+  google_fonts: ^2.1.0
   intro_slider: ^2.4.3
   responsive_framework: ^0.1.0
 
   qr_flutter: ^4.0.0
-  flutter_markdown: ^0.6.1
+  flutter_markdown: ^0.6.2
 
-  wakelock: ^0.5.1+1
+  wakelock: ^0.5.2
+
+  device_preview: ^0.7.1
 
 
   # todo https://pub.dev/packages/flutter_native_splash
@@ -74,7 +72,7 @@ dependencies:
 
 
 dev_dependencies:
-  build_runner: ^2.0.2
+  build_runner: ^2.0.3
   hive_generator: ^1.1.0
 
   lint: ^1.5.3
