--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
 
   # UI
   flutter_feather_icons: ^2.0.0+1
-  flutter_svg: any
+  flutter_svg: ^0.22.0
   google_fonts: ^2.1.0
   intro_slider: ^2.4.3
   responsive_framework: ^0.1.0
@@ -32,7 +32,7 @@ dependencies:
 
   wakelock: ^0.5.2
 
-  device_preview: ^0.7.1
+#  device_preview: ^0.7.1
 
 
   # todo https://pub.dev/packages/flutter_native_splash
@@ -42,7 +42,7 @@ dependencies:
 
 
 
-  path_provider: ^2.0.1
+  path_provider: ^2.0.2
   url_launcher: ^6.0.3
   device_apps: ^2.1.1
 
@@ -62,7 +62,7 @@ dependencies:
 
 
   # Android and IOS
-  file_picker: ^3.0.1
+  file_picker: ^3.0.2+2
 
 
   # ARCHITECTURE
@@ -72,7 +72,7 @@ dependencies:
 
 
 dev_dependencies:
-  build_runner: ^2.0.3
+  build_runner: ^2.0.4
   hive_generator: ^1.1.0
 
   lint: ^1.5.3
