--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -1,65 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>$(DEVELOPMENT_LANGUAGE)</string>
-	<key>CFBundleExecutable</key>
-	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
-	<key>CFBundleName</key>
-	<string>Sharik</string>
-	<key>CFBundlePackageType</key>
-	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>$(MARKETING_VERSION)</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
-	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>NSAppleMusicUsageDescription</key>
-	<string>Sharing file from the gallery</string>
-	<key>NSDesktopFolderUsageDescription</key>
-	<string>Sharing file </string>
-	<key>NSDocumentsFolderUsageDescription</key>
-	<string>Sharing file </string>
-	<key>NSDownloadsFolderUsageDescription</key>
-	<string>Sharing file </string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Sharik uses the data obtained from this permission for determining the connectivity status (Wi-Fi / Not connected)</string>
-	<key>NSLocationUsageDescription</key>
-	<string>Sharik uses the data obtained from this permission for determining the connectivity status (Wi-Fi / Not connected)</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Sharik uses the data obtained from this permission for determining the connectivity status (Wi-Fi / Not connected)</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Sharing file from the gallery</string>
-	<key>NSRemovableVolumesUsageDescription</key>
-	<string>Sharing file </string>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
-	<key>UIStatusBarStyle</key>
-	<string>UIStatusBarStyleDarkContent</string>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
-</dict>
+	<dict>
+		<key>CFBundleDevelopmentRegion</key>
+		<string>$(DEVELOPMENT_LANGUAGE)</string>
+		<key>CFBundleExecutable</key>
+		<string>$(EXECUTABLE_NAME)</string>
+		<key>CFBundleIdentifier</key>
+		<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+		<key>CFBundleInfoDictionaryVersion</key>
+		<string>6.0</string>
+		<key>CFBundleName</key>
+		<string>Sharik</string>
+		<key>CFBundlePackageType</key>
+		<string>APPL</string>
+		<key>CFBundleShortVersionString</key>
+		<string>$(MARKETING_VERSION)</string>
+		<key>CFBundleSignature</key>
+		<string>????</string>
+		<key>CFBundleVersion</key>
+		<string>$(CURRENT_PROJECT_VERSION)</string>
+		<key>LSRequiresIPhoneOS</key>
+		<true/>
+		<key>NSAppleMusicUsageDescription</key>
+		<string>Sharing file from the gallery</string>
+		<key>NSDesktopFolderUsageDescription</key>
+		<string>Sharing file</string>
+		<key>NSDocumentsFolderUsageDescription</key>
+		<string>Sharing file</string>
+		<key>NSDownloadsFolderUsageDescription</key>
+		<string>Sharing file</string>
+		<key>NSLocationAlwaysUsageDescription</key>
+		<string>Sharik uses the data obtained from this permission for determining the connectivity status (Wi-Fi / Not connected)</string>
+		<key>NSLocationUsageDescription</key>
+		<string>Sharik uses the data obtained from this permission for determining the connectivity status (Wi-Fi / Not connected)</string>
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>Sharik uses the data obtained from this permission for determining the connectivity status (Wi-Fi / Not connected)</string>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>Sharing file from the gallery</string>
+		<key>NSRemovableVolumesUsageDescription</key>
+		<string>Sharing file</string>
+		<key>UILaunchStoryboardName</key>
+		<string>LaunchScreen</string>
+		<key>UIMainStoryboardFile</key>
+		<string>Main</string>
+		<key>UIStatusBarStyle</key>
+		<string>UIStatusBarStyleDarkContent</string>
+		<key>UISupportedInterfaceOrientations</key>
+		<array>
+			<string>UIInterfaceOrientationPortrait</string>
+			<string>UIInterfaceOrientationLandscapeLeft</string>
+			<string>UIInterfaceOrientationLandscapeRight</string>
+		</array>
+		<key>UISupportedInterfaceOrientations~ipad</key>
+		<array>
+			<string>UIInterfaceOrientationPortrait</string>
+			<string>UIInterfaceOrientationPortraitUpsideDown</string>
+			<string>UIInterfaceOrientationLandscapeLeft</string>
+			<string>UIInterfaceOrientationLandscapeRight</string>
+		</array>
+		<key>UIViewControllerBasedStatusBarAppearance</key>
+		<false/>
+		<key>UIStatusBarHidden</key>
+		<false/>
+	</dict>
 </plist>
