share app dialog changes & other tweaks

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
 sdk.dir=/home/mark/Devtools/android_sdk
 flutter.sdk=/home/mark/Devtools/flutter
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=3.0.0
