--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   http: ^0.13.3
 
   path_provider: ^2.0.2
-  url_launcher: ^6.0.3
+  url_launcher: ^6.0.5
   device_apps: ^2.1.1
 
   hive: ^2.0.4
@@ -50,6 +50,9 @@ dependencies:
 
   intl: ^0.17.0
   collection: ^1.15.0
+
+  receive_sharing_intent: ^1.4.5
+
 
 
   # Android and IOS
