--- a/media/store.yaml
+++ b/media/store.yaml
@@ -782,3 +782,58 @@ it:
 
 
     Scarica Sharik adesso!
+
+id:
+  # 50 characters
+  Name: "Sharik - membagikan berkas melalui WI-FI"
+  # 60 characters
+  Very short description: "Sharik memungkinkan Anda untuk membagikan berkas dalam jaringan lokal Anda"
+  # 80 characters
+  Short description: "Solusi sumber-terbuka, antarplatform untuk membagikan berkas dalam jaringan lokal"
+  # 4000 characters
+  Full description: |
+    Sharik adalah solusi sumber-terbuka, antar-platform untuk membagikan berkas melalui Wi-Fi atau Hotspot Seluler.
+
+
+    Aplikasi ini memungkinkan Anda untuk mengirim foto, aplikasi, berkas, teks, apapun, kepada semua jenis perangkat yang terhubung ke jaringan yang sama. Ini nyaman dan sangat cepat.
+
+    Setelah memilih sebuah bahasa dan melewati intro, Anda dapat melihat tombol-tombol berbagi dan berkas-berkas terakhir yang Anda bagikan di layar utama. Di titik ini, Anda dapat membagikan gambar, berkas, aplikasi yang terpasang, atau hanya teks. Setelah memilih berkas, Anda akan melihat layar Berbagi. Di sini Anda dapat melihat status konektivitas (Wi-Fi/Hotspot Seluler) dan URL yang Anda perlu buka di perangkat lain. Setelah mengetik URL ini di browser dan menekan Enter di mesin lain, berkas akan mulai diunduh. Harap pastikan bahwa kedua perangkat terhubung ke jaringan yang sama.
+
+    Misal Anda memiliki Sharik di kedua perangkat. Jika begitu, setelah membagikan berkas dari satu komputer, Anda dengan mudah dapat mengklik tombol "Terima" di panel bawah dari Sharik lain. Setelah mengklik, layar Penerimaan akan ditampilkan. Jika Sharik melihat perangkat lain membagikan sesuatu di jaringan lokal Anda, itu akan ditampilkan. Sehingga Anda hanya perlu mengkliknya, browser akan terbuka, dan pengunduhan akan dimulai.
+
+    Sharik is entirely free to use, and it contains no ads. Moreover, it's source code is published in GitHub, so everyone can contribute to the development process. If you like it, please leave a star on our GitHub repository, and consider making a contribution: add a new language or help us with code.
+
+    Sharik is created using in Dart, Flutter, Hover.build, and Golang. Sharik is published under an open license (MIT).
+
+
+    YOU CAN SEND:
+      1. Photos (jpg, png, gif, etc)
+      2. Applications (apk)
+      3. Files (zip, rar, 7z, pdf, etc)
+      4. Text
+
+    SHARIK IS AVAILABLE ON THOSE LANGUAGES:
+      - English (English)
+      - Persian (فارسی)
+      - Arabic (عربي)
+      - Hindi (हिन्दी)
+      - Russian (Русский)
+      - Gujarati (ગુજરાતી)
+      - Polski (Polski)
+      - Ukrainian (Українська)
+      - Slovak (Slovenčina)
+      - Sinhala (සිංහල)
+      - Turkish (Türkçe)
+      - Chinese Simplified (简体中文)
+
+    SHARIK IS ALSO AVAILABLE FOR:
+      - Windows
+      - macOS
+      - Linux
+      - Android
+      - iOS
+
+    GitHub page: https://github.com/marchellodev/sharik
+
+
+    Download Sharik right now!
