--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,20 +22,18 @@ dependencies:
 
   # UI
   flutter_feather_icons: ^2.0.0+1
-  glyphicon: ^0.2.0
+  glyphicon: ^0.2.2
 
   flutter_svg: ^0.22.0
   google_fonts: ^2.1.0
   intro_slider: ^2.4.3
-  responsive_framework: ^0.1.0
+  responsive_framework: ^0.1.1
 
   qr_flutter: ^4.0.0
   flutter_markdown: ^0.6.2
 
   # todo linux support
   wakelock: ^0.5.2
-
-  #  device_preview: ^0.7.1
 
 
 
@@ -73,7 +71,8 @@ dependencies:
   # ARCHITECTURE
   provider: ^5.0.0
 
-
+  # DEBUG ONLY !!!
+  device_preview: ^0.7.3
 
 
 dev_dependencies:
@@ -83,6 +82,8 @@ dev_dependencies:
   lint: ^1.5.3
 
   flutter_native_splash: ^1.1.8+4
+
+
 
 
 flutter_native_splash:
@@ -97,8 +98,6 @@ flutter:
   assets:
     - assets/slides/
     - assets/flags/
-    - assets/files/
-    - assets/icons/social/
     - assets/
     - google_fonts/
 
