--- a/media/store.yaml
+++ b/media/store.yaml
@@ -813,7 +813,7 @@ id:
       4. Teks
 
     SHARIK TERSEDIA DALAM BAHASA:
-      - Inggis (English)
+      - Inggris (English)
       - Persia (فارسی)
       - Arab (عربي)
       - Hindi (हिन्दी)
