--- a/media/store.yaml
+++ b/media/store.yaml
@@ -821,7 +821,7 @@ id:
       - Gujarat (ગુજરાતી)
       - Polandia (Polski)
       - Ukrainia (Українська)
-      - Slovenia (Slovenčina)
+      - Slovakia (Slovenčina)
       - Sinhala (සිංහල)
       - Turki (Türkçe)
       - Cina Sederhana (简体中文)
