--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   flutter_svg: ^0.22.0
   google_fonts: ^2.1.0
   intro_slider: ^2.4.3
-  responsive_framework: ^0.1.1
+  responsive_framework: ^0.1.2
 
   qr_flutter: ^4.0.0
   flutter_markdown: ^0.6.2
@@ -71,8 +71,14 @@ dependencies:
   # ARCHITECTURE
   provider: ^5.0.0
 
-  # DEBUG ONLY !!!
-  device_preview: ^0.7.3
+  # ANALYTICS
+  # todo publish on pub.dev
+  ackee_dart:
+    git:
+      url: git://github.com/marchellodev/ackee_dart.git
+      ref: master
+
+
 
 
 dev_dependencies:
@@ -81,7 +87,7 @@ dev_dependencies:
 
   lint: ^1.5.3
 
-  flutter_native_splash: ^1.1.8+4
+  flutter_native_splash: ^1.2.0
 
 
 
