changed windows name and icon & macos support

--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "dev.marchello" "\0"
-            VALUE "FileDescription", "A new Flutter project." "\0"
+            VALUE "FileDescription", "Sharik is an open-source, cross-platform solution for sharing files via Wi-Fi or Mobile Hotspot." "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "sharik" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2021 dev.marchello. All rights reserved." "\0"
             VALUE "OriginalFilename", "sharik.exe" "\0"
-            VALUE "ProductName", "sharik" "\0"
+            VALUE "ProductName", "Sharik" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
