--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   http: ^0.13.3
 
   path_provider: ^2.0.2
-  url_launcher: ^6.0.6
+  url_launcher: ^6.0.7
   device_apps: ^2.1.1
 
 #  hive: ^2.0.4
@@ -59,7 +59,7 @@ dependencies:
 
 
   # Android and IOS
-  file_picker: ^3.0.2+2
+  file_picker: ^3.0.3
 
 
   # Desktop
