--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,6 +4,8 @@
 	<dict>
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
+		<key>CFBundleDisplayName</key>
+		<string>Sharik</string>
 		<key>CFBundleExecutable</key>
 		<string>$(EXECUTABLE_NAME)</string>
 		<key>CFBundleIdentifier</key>
@@ -11,46 +13,27 @@
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundleName</key>
-		<string>Sharik</string>
+		<string>sharik</string>
 		<key>CFBundlePackageType</key>
 		<string>APPL</string>
 		<key>CFBundleShortVersionString</key>
-		<string>$(MARKETING_VERSION)</string>
+		<string>$(FLUTTER_BUILD_NAME)</string>
 		<key>CFBundleSignature</key>
 		<string>????</string>
 		<key>CFBundleVersion</key>
-		<string>$(CURRENT_PROJECT_VERSION)</string>
+		<string>$(FLUTTER_BUILD_NUMBER)</string>
 		<key>LSRequiresIPhoneOS</key>
 		<true/>
-		<key>NSAppleMusicUsageDescription</key>
-		<string>Sharing file from the gallery</string>
-		<key>NSDesktopFolderUsageDescription</key>
-		<string>Sharing file</string>
-		<key>NSDocumentsFolderUsageDescription</key>
-		<string>Sharing file</string>
-		<key>NSDownloadsFolderUsageDescription</key>
-		<string>Sharing file</string>
-		<key>NSLocationAlwaysUsageDescription</key>
-		<string>Sharik uses the data obtained from this permission for determining the connectivity status (Wi-Fi / Not connected)</string>
-		<key>NSLocationUsageDescription</key>
-		<string>Sharik uses the data obtained from this permission for determining the connectivity status (Wi-Fi / Not connected)</string>
-		<key>NSLocationWhenInUseUsageDescription</key>
-		<string>Sharik uses the data obtained from this permission for determining the connectivity status (Wi-Fi / Not connected)</string>
-		<key>NSPhotoLibraryUsageDescription</key>
-		<string>Sharing file from the gallery</string>
-		<key>NSRemovableVolumesUsageDescription</key>
-		<string>Sharing file</string>
 		<key>UILaunchStoryboardName</key>
 		<string>LaunchScreen</string>
 		<key>UIMainStoryboardFile</key>
 		<string>Main</string>
-		<key>UIStatusBarStyle</key>
-		<string>UIStatusBarStyleDarkContent</string>
 		<key>UISupportedInterfaceOrientations</key>
 		<array>
 			<string>UIInterfaceOrientationPortrait</string>
 			<string>UIInterfaceOrientationLandscapeLeft</string>
 			<string>UIInterfaceOrientationLandscapeRight</string>
+			<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		</array>
 		<key>UISupportedInterfaceOrientations~ipad</key>
 		<array>
@@ -63,5 +46,36 @@
 		<false/>
 		<key>UIStatusBarHidden</key>
 		<false/>
-	</dict>
+        
+        
+        <key>CFBundleURLTypes</key>
+            <array>
+                <dict>
+                    <key>CFBundleTypeRole</key>
+                    <string>Editor</string>
+                    <key>CFBundleURLSchemes</key>
+                    <array>
+                        <string>ShareMedia</string>
+                    </array>
+                </dict>
+                <dict/>
+            </array>
+    
+        <key>NSAppleMusicUsageDescription</key>
+        <string>Sharing file from the gallery</string>
+        <key>NSDesktopFolderUsageDescription</key>
+        <string>Sharing file</string>
+        <key>NSDocumentsFolderUsageDescription</key>
+        <string>Sharing file</string>
+        <key>NSDownloadsFolderUsageDescription</key>
+        <string>Sharing file</string>
+           
+        
+        <key>NSPhotoLibraryUsageDescription</key>
+        <string>Sharing file from the gallery</string>
+        <key>NSRemovableVolumesUsageDescription</key>
+        <string>Sharing file</string>
+
+    </dict>
 </plist>
+    
