--- a/linux/packaging/appimage/sharik.AppDir/sharik.desktop
+++ b/linux/packaging/appimage/sharik.AppDir/sharik.desktop
@@ -2,7 +2,8 @@
 Version=1.0
 Type=Application
 Name=Sharik
-Icon=dev.marchello.Sharik
+Icon=sharik
 Exec=sharik %U
 Categories=Utility;Network;FileTools;P2P;Office
 Keywords=Files;Sharing
+
