synced crowdin & new flag icons

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,11 +4,11 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-            android:label="sharik"
+            android:label="Sharik"
             android:icon="@mipmap/ic_launcher">
         <activity
                 android:name=".MainActivity"
-                android:launchMode="singleTop"
+                android:launchMode="singleTask"
                 android:theme="@style/LaunchTheme"
                 android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
                 android:hardwareAccelerated="true"
