--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,10 @@ dependencies:
   flutter_svg: ^0.22.0
   google_fonts: ^2.1.0
   intro_slider: ^2.4.3
-  responsive_framework: ^0.1.2
+  responsive_framework: ^0.1.4
 
   qr_flutter: ^4.0.0
-  flutter_markdown: ^0.6.2
+  flutter_markdown: ^0.6.3
 
   # todo linux support
   wakelock: ^0.5.2
@@ -43,7 +43,7 @@ dependencies:
   http: ^0.13.3
 
   path_provider: ^2.0.2
-  url_launcher: ^6.0.7
+  url_launcher: ^6.0.9
   device_apps: ^2.1.1
 
 #  hive: ^2.0.4
@@ -64,9 +64,9 @@ dependencies:
 
   # Desktop
   file_selector: ^0.8.2
-  file_selector_windows: ^0.0.2
-  file_selector_linux: ^0.0.2
-  file_selector_macos: ^0.0.4
+  file_selector_windows: ^0.0.2+1
+  file_selector_linux: ^0.0.2+1
+  file_selector_macos: ^0.0.4+1
 
 
 
@@ -80,7 +80,7 @@ dependencies:
 
 
 dev_dependencies:
-  build_runner: ^2.0.5
+  build_runner: ^2.0.6
   hive_generator: ^1.1.0
 
   lint: ^1.5.3
