--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ homepage: https://github.com/marchellodev/sharik
 repository: https://github.com/marchellodev/sharik
 issue_tracker: https://github.com/marchellodev/sharik/issues
 publish_to: none
-version: 3.0.0
-versionCode: 8
+version: 3.0.0+11
+versionCode: 11
 author: marchellodev
 
 environment:
