Fixed multiple file sharing on Android & some other small tweaks

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=/home/mark/Devtools/android_sdk
-flutter.sdk=/home/mark/Devtools/flutter
-flutter.buildMode=release
+sdk.dir=/home/mark/Android/Sdk
+flutter.sdk=/opt/flutter
+flutter.buildMode=debug
 flutter.versionName=3.0.0
