--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,7 @@ dependencies:
 
 
   # Android and IOS
-  file_picker: ^3.0.4
+  file_picker: ^4.0.0
 
 
   # Desktop
@@ -70,7 +70,7 @@ dependencies:
 
 
   # ARCHITECTURE
-  provider: ^5.0.0
+  provider: ^6.0.0
 
   # ANALYTICS
   ackee_dart: ^0.0.2
@@ -82,7 +82,7 @@ dev_dependencies:
   build_runner: ^2.1.0
   hive_generator: ^1.1.0
 
-  lint: ^1.5.3
+  lint: ^1.6.0
 
   flutter_native_splash: ^1.2.1
 
@@ -96,7 +96,7 @@ flutter_native_splash:
 
 flutter:
   generate: true
-  uses-material-design: true
+  uses-material-design: false
 
   assets:
     - assets/
