--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,9 +4,8 @@ homepage: https://github.com/marchellodev/sharik
 repository: https://github.com/marchellodev/sharik
 issue_tracker: https://github.com/marchellodev/sharik/issues
 publish_to: none
-version: 3.0.0+11
-versionCode: 11
-author: marchellodev
+version: 3.1.0
+versionCode: 13
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -33,7 +32,7 @@ dependencies:
   flutter_markdown: ^0.6.6
 
   # todo linux support
-  wakelock: ^0.5.3+3
+  wakelock: ^0.5.4
 
   widget_to_image:
     git: https://github.com/marchellodev/widget_to_image.git
@@ -58,7 +57,7 @@ dependencies:
 
 
   # Android and IOS
-  file_picker: ^4.0.1
+  file_picker: ^4.0.2
 
 
   # Desktop
@@ -79,11 +78,11 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.1.2
-  hive_generator: ^1.1.0
+  hive_generator: ^1.1.1
 
-  lint: ^1.6.0
+  lint: ^1.7.2
 
-  flutter_native_splash: ^1.2.1
+  flutter_native_splash: ^1.2.3
 
 
 
