--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,7 @@ homepage: https://github.com/marchellodev/sharik
 repository: https://github.com/marchellodev/sharik
 issue_tracker: https://github.com/marchellodev/sharik/issues
 publish_to: none
-version: 3.1.0
-versionCode: 13
+version: 3.1.0+13
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -83,6 +82,7 @@ dev_dependencies:
   lint: ^1.7.2
 
   flutter_native_splash: ^1.2.3
+  change_app_package_name: ^1.0.0
 
 
 
