--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ homepage: https://github.com/marchellodev/sharik
 repository: https://github.com/marchellodev/sharik
 issue_tracker: https://github.com/marchellodev/sharik/issues
 publish_to: none
-version: 3.1.0+13
+version: 3.2.0+15
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -28,19 +28,19 @@ dependencies:
   responsive_framework: ^0.1.4
 
   qr_flutter: ^4.0.0
-  flutter_markdown: ^0.6.6
+  flutter_markdown: ^0.6.7
 
   # todo linux support
-  wakelock: ^0.5.4
+  wakelock: ^0.5.6
 
   widget_to_image:
     git: https://github.com/marchellodev/widget_to_image.git
 
 
   # UTILS
-  http: ^0.13.3
+  http: ^0.13.4
 
-  url_launcher: ^6.0.10
+  url_launcher: ^6.0.12
   device_apps: ^2.1.1
 
 #  hive: ^2.0.4
@@ -56,18 +56,18 @@ dependencies:
 
 
   # Android and IOS
-  file_picker: ^4.0.2
+  file_picker: ^4.1.4
 
 
   # Desktop
-  file_selector: ^0.8.2
+  file_selector: ^0.8.2+1
   file_selector_windows: ^0.0.2+1
   file_selector_linux: ^0.0.2+1
   file_selector_macos: ^0.0.4+1
 
 
   # ARCHITECTURE
-  provider: ^6.0.0
+  provider: ^6.0.1
 
   # ANALYTICS
   ackee_dart: ^0.0.2
@@ -76,12 +76,12 @@ dependencies:
 
 
 dev_dependencies:
-  build_runner: ^2.1.2
+  build_runner: ^2.1.4
   hive_generator: ^1.1.1
 
   lint: ^1.7.2
 
-  flutter_native_splash: ^1.2.3
+  flutter_native_splash: ^1.2.4
   change_app_package_name: ^1.0.0
 
 
