--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,15 +20,15 @@ dependencies:
   # UI
   bootstrap_icons: ^1.5.0
 
-  lucide_icons: ^0.15.30
+  lucide_icons: ^0.16.13
 
-  flutter_svg: ^0.22.0
+  flutter_svg: ^0.23.0+1
   google_fonts: ^2.1.0
   intro_slider: ^2.4.3
-  responsive_framework: ^0.1.4
+  responsive_framework: ^0.1.5
 
   qr_flutter: ^4.0.0
-  flutter_markdown: ^0.6.7
+  flutter_markdown: ^0.6.8
 
   # todo linux support
   wakelock: ^0.5.6
@@ -56,7 +56,7 @@ dependencies:
 
 
   # Android and IOS
-  file_picker: ^4.1.4
+  file_picker: ^4.2.0
 
 
   # Desktop
@@ -81,7 +81,7 @@ dev_dependencies:
 
   lint: ^1.7.2
 
-  flutter_native_splash: ^1.2.4
+  flutter_native_splash: ^1.3.1
   change_app_package_name: ^1.0.0
 
 
