--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,20 +18,20 @@ dependencies:
 
 
   # UI
-  bootstrap_icons: ^1.5.0
+  bootstrap_icons: ^1.7.2
 
-  lucide_icons: ^0.16.13
+  lucide_icons: ^0.17.9
 
-  flutter_svg: ^0.23.0+1
-  google_fonts: ^2.1.0
-  intro_slider: ^2.4.3
-  responsive_framework: ^0.1.5
+  flutter_svg: ^1.0.3
+  google_fonts: ^2.3.1
+  intro_slider: ^3.0.3
+  responsive_framework: ^0.1.7
 
   qr_flutter: ^4.0.0
-  flutter_markdown: ^0.6.8
+  flutter_markdown: ^0.6.9
 
   # todo linux support
-  wakelock: ^0.5.6
+  wakelock: ^0.6.1+2
 
   widget_to_image:
     git: https://github.com/marchellodev/widget_to_image.git
@@ -40,7 +40,7 @@ dependencies:
   # UTILS
   http: ^0.13.4
 
-  url_launcher: ^6.0.12
+  url_launcher: ^6.0.20
   device_apps: ^2.1.1
 
 #  hive: ^2.0.4
@@ -48,7 +48,6 @@ dependencies:
 
 
   intl: ^0.17.0
-  collection: ^1.15.0
 
   # todo implement
   receive_sharing_intent: ^1.4.5
@@ -56,14 +55,14 @@ dependencies:
 
 
   # Android and IOS
-  file_picker: ^4.2.0
+  file_picker: ^4.5.1
 
 
   # Desktop
-  file_selector: ^0.8.2+1
-  file_selector_windows: ^0.0.2+1
+  file_selector: ^0.8.4
+  file_selector_windows: ^0.8.2
   file_selector_linux: ^0.0.2+1
-  file_selector_macos: ^0.0.4+1
+  file_selector_macos: ^0.8.2
 
 
   # ARCHITECTURE
@@ -76,14 +75,14 @@ dependencies:
 
 
 dev_dependencies:
-  build_runner: ^2.1.4
-  hive_generator: ^1.1.1
+  build_runner: ^2.1.7
+  hive_generator: ^1.1.2
 
-  lint: ^1.7.2
+  lint: ^1.8.2
 
-  flutter_native_splash: ^1.3.1
+
   change_app_package_name: ^1.0.0
-
+  flutter_native_splash: ^2.1.1
 
 
 
