linux flatpak packaging script [not finished, not thoroughly tested] (related to #129)

--- a/scripts/packaging/flatpak/dev.marchello.Sharik.desktop
+++ b/scripts/packaging/flatpak/dev.marchello.Sharik.desktop
@@ -2,7 +2,7 @@
 Version=1.0
 Type=Application
 Name=Sharik
-Icon=sharik
+Icon=dev.marchello.Sharik
 Exec=sharik %U
 Categories=Utility;Network;FileTools;P2P;Office
 Keywords=Files;Sharing
