--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ publish_to: none
 version: 3.2.0+15
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -18,30 +18,30 @@ dependencies:
 
 
   # UI
-  bootstrap_icons: ^1.7.2
+  bootstrap_icons: ^1.9.1
 
-  lucide_icons: ^0.17.9
+  lucide_icons: ^0.88.0
 
-  flutter_svg: ^1.0.3
-  google_fonts: ^2.3.1
-  intro_slider: ^3.0.3
-  responsive_framework: ^0.1.7
+  flutter_svg: ^1.1.4
+  google_fonts: ^3.0.1
+  intro_slider: 3.0.3
+  responsive_framework: ^0.2.0
 
   qr_flutter: ^4.0.0
-  flutter_markdown: ^0.6.9
+  flutter_markdown: ^0.6.10+4
 
   # todo linux support
-  wakelock: ^0.6.1+2
+  wakelock: ^0.6.2
 
   widget_to_image:
     git: https://github.com/marchellodev/widget_to_image.git
 
 
   # UTILS
-  http: ^0.13.4
+  http: ^0.13.5
 
-  url_launcher: ^6.0.20
-  device_apps: ^2.1.1
+  url_launcher: ^6.1.5
+  device_apps: ^2.2.0
 
 #  hive: ^2.0.4
   hive_flutter: ^1.1.0
@@ -55,18 +55,18 @@ dependencies:
 
 
   # Android and IOS
-  file_picker: ^4.5.1
+  file_picker: ^5.0.1
 
 
   # Desktop
-  file_selector: ^0.8.4
-  file_selector_windows: ^0.8.2
-  file_selector_linux: ^0.0.2+1
-  file_selector_macos: ^0.8.2
+  file_selector: ^0.9.1
+  file_selector_windows: ^0.9.1+2
+  file_selector_linux: ^0.9.0
+  file_selector_macos: ^0.9.0+1
 
 
   # ARCHITECTURE
-  provider: ^6.0.1
+  provider: ^6.0.3
 
   # ANALYTICS
   ackee_dart: ^0.0.2
@@ -74,14 +74,14 @@ dependencies:
 
 
 dev_dependencies:
-  build_runner: ^2.1.7
-  hive_generator: ^1.1.2
+  build_runner: ^2.2.0
+  hive_generator: ^1.1.3
 
-  lint: ^1.8.2
+  lint: ^1.10.0
 
 
-  change_app_package_name: ^1.0.0
-  flutter_native_splash: ^2.1.1
+  change_app_package_name: ^1.1.0
+  flutter_native_splash: ^2.2.8
 
 
 
